[gd_scene load_steps=3 format=3 uid="uid://38jgl31xlam5"]

[ext_resource type="ButtonGroup" uid="uid://d0w8qxd16g417" path="res://themes/game_content_button_group.tres" id="1_2xh6p"]
[ext_resource type="Script" uid="uid://d3yi4hpone63f" path="res://modals/game_content_window.gd" id="1_vqrql"]

[node name="GameContentWindow" type="Window"]
auto_translate_mode = 1
title = "Additional game content"
initial_position = 1
size = Vector2i(500, 320)
transient = true
exclusive = true
min_size = Vector2i(500, 320)
script = ExtResource("1_vqrql")
button_group = ExtResource("1_2xh6p")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/ScrollContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Select additional content for the game"
horizontal_alignment = 1

[node name="ContentContainer" type="VBoxContainer" parent="PanelContainer/ScrollContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4

[node name="CheckBox" type="CheckBox" parent="PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/ContentContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 12
button_group = ExtResource("1_2xh6p")
text = "Game content"

[node name="CheckBox2" type="CheckBox" parent="PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/ContentContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 12
button_group = ExtResource("1_2xh6p")
text = "Game content 2"

[node name="HSeparator" type="HSeparator" parent="PanelContainer/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="NoteLabel" type="Label" parent="PanelContainer/ScrollContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Note: In order to add Metropolis Dawn content properly, you have to decide which faction you want to play with then click on proper button in Options > Prototype modifications.

For Ghorkov click \"Reset for Metropolis Dawn(Ghorkov)\" or just change the first line to: include script:startupG.scr

For Taerkasten click \"Reset for Metropolis Dawn(Taerkasten)\" or just change the first line to: include script:startupT.scr"
horizontal_alignment = 1
autowrap_mode = 2

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="CancelButton" type="Button" parent="PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Cancel"

[node name="SaveButton" type="Button" parent="PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Save"

[connection signal="about_to_popup" from="." to="." method="_on_about_to_popup"]
[connection signal="close_requested" from="." to="." method="close"]
[connection signal="pressed" from="PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer/CancelButton" to="." method="close"]
[connection signal="pressed" from="PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
